fixed all tickets